--- a/esphome/common.yaml
+++ b/esphome/common.yaml
@@ -21,7 +21,7 @@ ota:
 packages:
   usb-timer: github://spuder/usb-timer/esphome/lib/hardware.yaml
 
-dashboard_input:
+dashboard_import:
   package_import_url: github://spuder/usb-timer/esphome/common.yaml@v1
 
 wifi:
