--- a/esphome/example.yaml
+++ b/esphome/example.yaml
@@ -8,4 +8,4 @@ substitutions:
   name: "usb-timer1"
 
 dashboard_import:
-  package_import_url: github://spuder/usb-timer/esphome/common.yaml@vmain
+  package_import_url: github://spuder/usb-timer/esphome/common.yaml@main
