--- a/Firmware/esphome/example.yaml
+++ b/Firmware/esphome/example.yaml
@@ -4,8 +4,9 @@
 # To get started with ESP home, just add the following lines to your esphome config
 # If using home-assistant+esphome, append the following lines to the bottom of the config
 
-# substitutions:
-#   name: "usb-timer1"
+
+packages:
+  usb-timer: github://spuder/USB-Timer/Firmware/esphome/packages/hardware.yaml
 
 dashboard_import:
   package_import_url: github://spuder/USB-Timer/Firmware/esphome/common.yaml@main
